# KeyStone

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  ARCHITECTURE.md  ARTIFACT_INDEX.md  CLAUDE.md  CONSOLIDATION_AUDIT.md  DECISIONS.md  FINAL_STATE_AUDIT.md  M1-00_SEAM_MATRIX_DESIGN.md  M2-00_CONVERGENCE_DESIGN.md  MA-00_REDTEAM_AGENT_DESIGN.md  MB-00_TRIAGE_AGENT_DESIGN.md  MC-00_DEFENSE_AGENT_DESIGN.md  MEMORY.md  Makefile  Modelfile  OPEN_QUESTIONS.md  OPTION-A-00_TRIAGE_LIVE_DESIGN.md  OPTION-A-02-00_REDTEAM_LIVE_DESIGN.md  README.md  ROADMAP.md  TASKS.md  agentic_audit.md  eval_feasibility.md  multi_agent_feasibility.md  pyproject.toml  remediation_probe.md
.claude/commands/: finish-task.md  new-exec-plan.md  verify.md
.github/workflows/: ci.yml
.streamlit/: config.toml
colab/: finetune_triage_qlora.py
docs/: MC-00_DEFENSE_AGENT_DESIGN.md  QUALITY.md  feature_list.json  index.md
docs/design/: architecture-boundaries.md  core-principles.md  observability.md
docs/exec-plans/: README.md  TEMPLATE.md  mc-01-defense-agent.md  mc-02-adversarial-loop.md  mc-pre-01-remediation-c.md  opt-a-01b-triage-prompt-rescue.md  opt-a-02b-scan-scoping.md
docs/exec-plans/active/: obligation-graph.md
docs/exec-plans/completed/: assurance-milestone.md  chassis.md  citation-validation-gate.md  control-library.md  convergence-hero.md  demo-run-result.md  deontic-guard.md  dependency-hygiene-cryptography.md  diagrams-01-mermaid.md  evidence-model.md  fatf-engine.md  garak-probe.md  guardrails-patch.md  jurisdiction-screen.md  l2-l1-seam.md  layer1-milestone.md  live-execution-view.md  ma-01-redteam-agent.md  matrix-result.md  mb-01-triage-agent.md  mock-agent.md  modality-view-model.md  obligation-graph.md  obligation-mappings.md  opt-a-01-triage-live.md  opt-a-02-redteam-live.md  p2-rapid-movement.md  p3-large-transfer.md  p4-boundary.md  p5-recipient.md  recorded-fallback.md  report-generation.md  seam-framework.md  seam-screen.md  seamless-embedding.md  summary-phrasing.md  supporting-shell.md  tool-calling-seam.md  transaction-substrate.md  ui-03-agentic-framing.md  (+1 more)
docs/paper/: eval_extract.md  finetune_feasibility.md  finetune_spike.md  incident_grounding.md  sysdesign_extract.md
docs/references/: README.md
scripts/: finetune_eval.py  finetune_gen_data.py  spike_toolcalling.py  triage_llm_eval.py  validate_controls.py  validate_feature_list.py  validate_obligations.py
src/keystone/: __init__.py  __main__.py
src/keystone/agents/: __init__.py  adversarial.py  defense.py  red_team.py  run.py  triage.py
src/keystone/agents/orchestrator/: __init__.py  assurance_workflow.yml  config.py  functions.py  layer1_workflow.yml  workflow.yml
src/keystone/assurance/: __init__.py  agent.py  framework.py  garak_endpoint.py  garak_probe.py  guard.py  injection_patterns.py  layer1_live.py  layer1_milestone.py  loop.py  loop_live.py  pairs.py  referenced.py  remediation.py  seam.py  seam_p2.py  seam_p3.py  seam_p4.py  seam_p5.py  signature.py
src/keystone/assurance/_targets/: vuln_agent_target.py
src/keystone/assurance/guardrails/: actions.py  config.yml  rails.co
src/keystone/convergence/: __init__.py  evidence.py  mappings.py
src/keystone/core/: __init__.py  deontic.py
src/keystone/core/controls/: __init__.py  crosswalk.py  loader.py  models.py
src/keystone/core/controls/data/: controls.json
src/keystone/core/fatf/: __init__.py  engine.py  models.py
src/keystone/core/ledger/: __init__.py  ledger.py  models.py
src/keystone/core/obligations/: __init__.py  loader.py  models.py
src/keystone/core/obligations/data/: obligations.json
src/keystone/core/reporting/: __init__.py  facts.py  report.py
src/keystone/core/transactions/: __init__.py  generator.py  models.py
src/keystone/demo/: __init__.py  __main__.py  adversarial.py  convergence.py  defense.py  matrix.py  narrate.py  recorded_run.json  red_team.py  run_result.py  runner.py  triage.py
src/keystone/finetune/: __init__.py  dataset.py  protocol.py
src/keystone/finetune/data/: heldout_eval.jsonl  train.jsonl
src/keystone/llm/: __init__.py  phrasing.py  report_narrative.py
src/keystone/llm/inference/: __init__.py  base.py  nim.py  ollama.py  tools.py
src/keystone/policy/: __init__.py
src/keystone/ui/: __init__.py  app.py  convergence_app.py  convergence_screen.py  embed.py  jurisdiction_app.py  jurisdiction_screen.py  matrix_app.py  matrix_screen.py  modality_view.py  run_app.py  run_view.py  seam_app.py  seam_screen.py  shell_app.py  shell_screens.py  sidebar.py  svg.py  tokens.py
tests/: test_adversarial_loop.py  test_architecture.py  test_assurance_loop.py  test_cli_demo.py  test_controls.py  test_convergence_app.py  test_convergence_screen.py  test_defense_agent.py  test_defense_boundary.py  test_demo_run_result.py  test_deontic.py  test_docs.py  test_evidence_model.py  test_fatf.py  test_feature_list.py  test_finetune_disjointness.py  test_garak_probe.py  test_guardrails_patch.py  test_harness.py  test_inference.py  test_inference_tools.py  test_jurisdiction_app.py  test_jurisdiction_screen.py  test_layer1_milestone.py  test_ledger.py  test_matrix_app.py  test_matrix_screen.py  test_mock_agent.py  test_modality_view.py  test_obligation_mappings.py  test_obligations.py  test_offline_fallback.py  test_orchestrator.py  test_phrasing.py  test_red_team_agent.py  test_red_team_boundary.py  test_red_team_live.py  test_remediation.py  test_reporting.py  test_run_app.py  (+17 more)
tests/e2e/: test_cli.py
tests/fixtures/: seam_run_result.json
tests/fixtures/garak/: latentinjection_clean.report.jsonl  latentinjection_guarded.report.jsonl  latentinjection_vulnerable.report.jsonl
