[project]
name = "keystone"
version = "0.0.0"
description = "Unified multi-agent compliance & assurance demo on the NVIDIA agentic stack."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Proprietary" }
authors = [{ name = "Keystone" }]

# Runtime dependencies. Floors are intentionally loose `>=`; uv.lock pins the
# exact resolved versions. garak is deliberately NOT here — it is installed as
# an isolated CLI tool (see ADR-0003) and invoked as a subprocess.
dependencies = [
    "nvidia-nat>=1.7",
    "nemoguardrails>=0.22",
    "pydantic>=2.7",
    "lxml>=5.0",
    "networkx>=3.0",
    "streamlit>=1.40",
    "httpx>=0.27",
]

[project.scripts]
keystone = "keystone.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/keystone"]

# PEP 735 dependency groups. Installed together via `uv sync --all-groups`.
[dependency-groups]
dev = [
    "ruff>=0.13",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "import-linter>=2.11",
]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-randomly>=3.15",
]
security = [
    "pip-audit>=2.7",
    "detect-secrets>=1.5",
]

# --------------------------------------------------------------------------- #
# Ruff                                                                        #
# --------------------------------------------------------------------------- #
[tool.ruff]
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
# E/F = pyflakes+pycodestyle, I = isort, B = bugbear, UP = pyupgrade,
# SIM = simplify, S = flake8-bandit (security), PL = pylint.
select = ["E", "F", "I", "B", "UP", "SIM", "S", "PL"]
# E501 (line length) is handled by the formatter; do not double-enforce.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Asserts are the point of a test file; S101 would flag every one.
"tests/**" = ["S101"]
# Tests that legitimately spawn a built/installed console script with fixed,
# trusted argv and no shell; S603 (subprocess review) is noise here, not a
# finding. (e2e CLI test; architecture test runs the lint-imports CLI.)
"tests/e2e/**" = ["S101", "S603"]
"tests/test_architecture.py" = ["S603"]

# --------------------------------------------------------------------------- #
# mypy                                                                        #
# --------------------------------------------------------------------------- #
[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests", "scripts"]
mypy_path = ["src", "scripts"]
warn_unused_configs = true

# Untyped third-party libraries. Override per-module so we never blanket-silence
# our own code. Trim this list as upstreams ship type information.
[[tool.mypy.overrides]]
module = [
    "nat.*",
    "nvidia_nat.*",
    "nemoguardrails.*",
    "networkx.*",
    "streamlit.*",
    "lxml.*",
]
ignore_missing_imports = true

# --------------------------------------------------------------------------- #
# pytest + coverage                                                           #
# --------------------------------------------------------------------------- #
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]
addopts = "--cov=keystone --cov-report=term-missing --cov-fail-under=70 --strict-markers"
markers = [
    "slow: deselect with -m 'not slow' for the fast gate",
    "milestone: end-to-end checks that prove a phase milestone",
    "e2e: exercises a real entry point (e.g. the installed console script)",
]

[tool.coverage.run]
branch = true
source = ["keystone"]

[tool.coverage.report]
show_missing = true

# --------------------------------------------------------------------------- #
# import-linter — architecture boundaries (deterministic core / LLM edge)      #
# See docs/design/architecture-boundaries.md. Run via `make arch`, pre-commit, #
# CI, and tests/test_architecture.py. Grow as modules land.                    #
# --------------------------------------------------------------------------- #
[tool.importlinter]
root_package = "keystone"

[[tool.importlinter.contracts]]
# The contract name doubles as the failure message / remediation hint.
name = "Deterministic core must not import the edge (agents/policy/llm/ui/assurance) — move shared logic into keystone.core or invert the dependency"
type = "forbidden"
source_modules = ["keystone.core"]
forbidden_modules = [
    "keystone.agents",
    "keystone.policy",
    "keystone.llm",
    "keystone.ui",
    "keystone.assurance",
]
