[project]
name = "keystone"
version = "0.0.0"
description = "Unified multi-agent compliance & assurance demo on the NVIDIA agentic stack."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Proprietary" }
authors = [{ name = "Keystone" }]

# Runtime dependencies. Floors are intentionally loose `>=`; uv.lock pins the
# exact resolved versions. garak is deliberately NOT here — it is installed as
# an isolated CLI tool (see ADR-0003) and invoked as a subprocess.
dependencies = [
    "nvidia-nat>=1.7",
    "nemoguardrails>=0.22",
    "pydantic>=2.7",
    "lxml>=5.0",
    "networkx>=3.0",
    "streamlit>=1.40",
    "httpx>=0.27",
]

[project.scripts]
keystone = "keystone.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/keystone"]

# Security override (ADR-0013). nvidia-nat-core 1.7.0 caps cryptography<47, which
# strands us on 46.0.7 (GHSA-537c-gmf6-5ccf, fixed only in 48.0.1). The cap is a
# conservative upper bound, not a real incompatibility — the full gate incl. the
# chassis milestone passes on cryptography 49. REMOVAL TRIGGER: drop this once a
# stable nvidia-nat ships a nat-core that allows cryptography>=48.
[tool.uv]
override-dependencies = ["cryptography>=48.0.1"]

# PEP 735 dependency groups. Installed together via `uv sync --all-groups`.
[dependency-groups]
dev = [
    "ruff>=0.13",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "import-linter>=2.11",
]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-randomly>=3.15",
]
security = [
    "pip-audit>=2.7",
    "detect-secrets>=1.5",
]

# --------------------------------------------------------------------------- #
# Ruff                                                                        #
# --------------------------------------------------------------------------- #
[tool.ruff]
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
# E/F = pyflakes+pycodestyle, I = isort, B = bugbear, UP = pyupgrade,
# SIM = simplify, S = flake8-bandit (security), PL = pylint.
select = ["E", "F", "I", "B", "UP", "SIM", "S", "PL"]
# E501 (line length) is handled by the formatter; do not double-enforce.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Asserts are the point of a test file; S101 would flag every one. Comparing
# against literal expected values (PLR2004) is also normal in assertions.
"tests/**" = ["S101", "PLR2004"]
# Tests that legitimately spawn a built/installed console script with fixed,
# trusted argv and no shell; S603 (subprocess review) is noise here, not a
# finding. (e2e CLI test; architecture test runs the lint-imports CLI.)
"tests/e2e/**" = ["S101", "S603"]
"tests/test_architecture.py" = ["S603"]

# --------------------------------------------------------------------------- #
# mypy                                                                        #
# --------------------------------------------------------------------------- #
[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests", "scripts"]
mypy_path = ["src", "scripts"]
warn_unused_configs = true

# Untyped third-party libraries. Override per-module so we never blanket-silence
# our own code. Trim this list as upstreams ship type information.
[[tool.mypy.overrides]]
module = [
    "nat.*",
    "nvidia_nat.*",
    "nemoguardrails.*",
    "networkx.*",
    "streamlit.*",
    "lxml.*",
]
ignore_missing_imports = true

# NAT integration boundary: nvidia-nat ships no py.typed, so subclassing its
# FunctionBaseConfig and using its @register_function decorator are "untyped"
# under strict. Relax ONLY those two sub-flags, ONLY for this one module — the
# rest of the codebase stays fully strict. See ADR-0010.
[[tool.mypy.overrides]]
module = ["keystone.agents.orchestrator.*"]
disallow_subclassing_any = false
disallow_untyped_decorators = false

# The config classes pass NAT's `name=` class keyword to __init_subclass__,
# which mypy resolves against object's signature (the base is untyped). This
# module is class-defs only, so scoping the call-arg relaxation here is safe.
[[tool.mypy.overrides]]
module = ["keystone.agents.orchestrator.config"]
disable_error_code = ["call-arg"]

# NeMo Guardrails analog of ADR-0010: nemoguardrails ships no py.typed, so its
# `@action` decorator is "untyped" under strict. The action shim is a thin
# adapter only — its security logic lives (fully typed) in
# keystone.assurance.injection_patterns — so relaxing ONLY disallow_untyped_decorators
# for ONLY this shim module is safe; the rest stays strict.
[[tool.mypy.overrides]]
module = ["keystone.assurance.guardrails.actions"]
disallow_untyped_decorators = false

# --------------------------------------------------------------------------- #
# pytest + coverage                                                           #
# --------------------------------------------------------------------------- #
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]
addopts = "--cov=keystone --cov-report=term-missing --cov-fail-under=70 --strict-markers"
markers = [
    "slow: deselect with -m 'not slow' for the fast gate",
    "milestone: end-to-end checks that prove a phase milestone",
    "e2e: exercises a real entry point (e.g. the installed console script)",
]

[tool.coverage.run]
branch = true
source = ["keystone"]
# The Streamlit shell is UI glue (no logic); it is verified by `make demo`, not
# unit tests. Excluding it keeps the floor meaningful for the deterministic core.
omit = ["*/keystone/ui/app.py"]

[tool.coverage.report]
show_missing = true

# --------------------------------------------------------------------------- #
# import-linter — architecture boundaries (deterministic core / LLM edge)      #
# See docs/design/architecture-boundaries.md. Run via `make arch`, pre-commit, #
# CI, and tests/test_architecture.py. Grow as modules land.                    #
# --------------------------------------------------------------------------- #
[tool.importlinter]
root_package = "keystone"

[[tool.importlinter.contracts]]
# The contract name doubles as the failure message / remediation hint.
name = "Deterministic core must not import the edge (agents/policy/llm/ui/assurance/convergence) — move shared logic into keystone.core or invert the dependency"
type = "forbidden"
source_modules = ["keystone.core"]
forbidden_modules = [
    "keystone.agents",
    "keystone.policy",
    "keystone.llm",
    "keystone.ui",
    "keystone.assurance",
    "keystone.convergence",
]
